--- a/kustomize/service.yaml
+++ b/kustomize/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx
+  annotations:
+  argocd.argoproj.io/sync-wave: "1"
 spec:
   selector:
     app: nginx
