--- a/kustomize/statefulset.yaml
+++ b/kustomize/statefulset.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: persist
+  annotations:
+  argocd.argoproj.io/sync-wave: "1"
 spec:
   selector:
     matchLabels:
