Adding sync waves

--- a/kustomize/kustomization.yaml
+++ b/kustomize/kustomization.yaml
@@ -3,3 +3,6 @@ kind: Kustomization
 resources:
 - deployment.yaml
 - service.yaml
+- mongodb-pvc.yaml
+- mongodb-configmap.yaml
+- mongodb-statefulset.yaml
