--- a/kustomize/service.yaml
+++ b/kustomize/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx
+  namespace: mongo
   annotations:
     argocd.argoproj.io/sync-wave: "1"
 spec:
